--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "@radix-ui/react-separator": "^1.0.0",
     "@radix-ui/react-switch": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
-    "@reduxjs/toolkit": "^1.8.5",
     "@stitches/react": "^1.2.8",
+    "@tanstack/react-query": "^4.2.3",
+    "axios": "^0.27.2",
     "i18next": "^21.9.1",
     "i18next-browser-languagedetector": "^6.1.5",
     "i18next-http-backend": "^1.4.1",
@@ -36,8 +37,7 @@
     "next-i18next": "^11.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-i18next": "^11.18.4",
-    "react-redux": "^8.0.2"
+    "react-i18next": "^11.18.4"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
