change log: - added tasks - added component activeLink; - added component alertDialog - added component avatar; - added component box; - added component card; - added component colorPicker; - added component dialog; - added component grid; - added component input; - added component keyFrame; - added component scrollArea; - added component title; - added component pack TaskCard; - added component pack TaskDialog; - fixed heaedr; - fixed logo; - fixed api fetchers for auth and task; - fixed api hook useAuth and useTask; - fixed component Button; - fixed Task resource; - added page for login; - added page for signup; - added style.css file;

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,10 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@components/*": ["./app/components"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "app/components/task/TaskDialog"],
   "exclude": ["node_modules"]
 }
