--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@radix-ui/react-label": "^1.0.0",
     "@radix-ui/react-navigation-menu": "^1.0.0",
     "@radix-ui/react-popover": "1.0.0",
+    "@radix-ui/react-radio-group": "^1.0.0",
     "@radix-ui/react-scroll-area": "^1.0.0",
     "@radix-ui/react-select": "^1.0.0",
     "@radix-ui/react-separator": "^1.0.0",
     "@radix-ui/react-switch": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
+    "@radix-ui/react-tooltip": "^1.0.0",
     "@stitches/react": "^1.2.8",
     "@tanstack/react-query": "^4.2.3",
     "axios": "^0.27.2",
